4.14

- Changed: Give players score if database is found and revive lives are infinite 
- Fixed: Stupid bug which prevented the creation of the last main target when select targets was activated; this also rendered removing auf db autosave rows; game breaker :/