@@ -462,7 +462,7 @@ d_all_ammoloads = (allMissionObjects "HeliH") select {(str _x) select [0, 10] ==
 	0 spawn d_fnc_playerrankloop;
 };
 
-diag_log ["Internal D Version: 4.12"];
+diag_log ["Internal D Version: 4.14"];
 
 if (!d_no_ai) then {
 	if (d_with_ai) then {
