@@ -9,9 +9,8 @@ private _newvd = round (_this select 1);
 if (!d_isvdreduced) then {
 	setViewDistance _newvd;
 	setObjectViewDistance _newvd + 100;
-} else {
-	d_curviewdistance = _newvd;
-	d_curobjectdistance = _newvd + 100;
 };
+d_curviewdistance = _newvd;
+d_curobjectdistance = _newvd + 100;
 
 profileNamespace setVariable ["dom_viewdistance", _newvd];
