@@ -32,6 +32,9 @@ if (hasInterface) then {
 	};
 	setViewDistance _vd;
 	setObjectViewDistance (_vd + 100);
+	
+	d_curviewdistance = _vd;
+	d_curobjectdistance = _vd + 100;
 
 	if (isMultiplayer) then {
 		["d_server_name", [500, 500], "ICON", "ColorYellow", [2, 2], format ["%1 %2", localize "STR_DOM_MISSIONSTRING_1583a", serverName], 0, "hd_dot"] call d_fnc_CreateMarkerLocal;
